# pixi-pylance-test

./: README.md
test1/: pyproject.toml
test1/test1/: __init__.py  test1.py
test2/: pyproject.toml
test2/test2/: __init__.py
