[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["test2"]

[project]
name = "test2"
version = "0.1.0"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
